--- a/Linux/01.Linux发展史.md
+++ b/Linux/01.Linux发展史.md
@@ -13,7 +13,7 @@
 ![冯诺依曼体系结构](../images/image01/linuxnote102.jpg "冯诺依曼体系结构")  
 #### 1.3 计算机软件  
 软件是一系列按照特定顺序组织的计算机数据和指令的集合。一般来讲软件被划分为系统软件、应用软件和介于这两者之间的中间件。  
-****系统软件便是运行在硬件基础上，而应用软件则是运行在系统软件上的  
+_系统软件便是运行在硬件基础上，而应用软件则是运行在系统软件上的_  
 ![软件体系结构](../images/image01/linuxnote103.jpg "软件体系结构")  
 ### 2.Linux发展过程  
 #### 2.1 Linux前身-Unix  
