Linux系统文件介绍

--- a/Linux/03.Linux系统文件介绍.md
+++ b/Linux/03.Linux系统文件介绍.md
@@ -123,5 +123,5 @@ usr:存放的是用户自己安装的软件。类似于windows下的program file
 #### var
 var:该目录用于存放的程序/系统的日志文件。
 
-### 2.3基本文件系统的总体概况
+#### 2.3基本文件系统的总体概况
 ![Linux文件系统总体概况](../images/image03/303.png "Linux文件系统总体概况")
